# bitfinex-api-py-maker-sieve

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  PRE-COMMIT-SUMMARY.md  PROJECT_SUMMARY.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  test-ci-locally.sh  test_postonly.py  tox.ini
.github/workflows/: CLAUDE.md  ci.yml
bfx_postonly/: __init__.py  client.py  decorators.py  exceptions.py  utils.py
docs/: PRE-COMMIT.md
examples/: __init__.py  advanced_usage.py  basic_usage.py
scripts/: dev.py  pre-commit  setup-dev.sh  setup-precommit.sh  validate.py
tests/: __init__.py  test_postonly.py
