[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bitfinex-api-py-postonly-wrapper"
version = "1.0.0"
description = "Python wrapper for bitfinex-api-py that enforces POST_ONLY on limit orders for safe market-making"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "0xferit", email = "ferit@cryptolab.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "bitfinex-api-py @ git+https://github.com/0xferit/bitfinex-api-py.git@7f5a8b2c3d1e4f5a6b7c8d9e0f1a2b3c4d5e6f7a"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/0xferit/bitfinex-api-py-postonly-wrapper"
Repository = "https://github.com/0xferit/bitfinex-api-py-postonly-wrapper"
Issues = "https://github.com/0xferit/bitfinex-api-py-postonly-wrapper/issues"

[tool.setuptools.packages.find]
include = ["bfx_postonly*"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["bfx_postonly"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
